bugfix: timestampNone items shouldn't have extra padding on left

--- a/app/styles/item.css
+++ b/app/styles/item.css
@@ -36,7 +36,6 @@
 .fillPane .item.currentItem, .pane.windowFg .item.currentItem {
 	display:block;
 }
-
 /* Nope, can't explain the -3px. TODO */
  .fillPane .bl {
 	width:auto;
@@ -219,7 +218,7 @@
  *
 //=========================== */
  .timestampNone .item, .item.timestampNone {
-	/* padding-left: 0; */
+	padding-left: 0.5em;
 }
 .timestampNone .item .displayTime, .item.timestampNone .displayTime {
 	display:none
